More tests in ui design

--- a/QgsTIM_dialog_base.ui
+++ b/QgsTIM_dialog_base.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>855</width>
-    <height>560</height>
+    <width>847</width>
+    <height>550</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -29,18 +29,55 @@
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QgsMapLayerComboBox" name="mMapLayerComboBox">
+  <widget class="QgsCollapsibleGroupBox" name="mGroupBox">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>230</y>
-     <width>160</width>
-     <height>27</height>
+     <x>30</x>
+     <y>20</y>
+     <width>300</width>
+     <height>161</height>
     </rect>
    </property>
+   <property name="title">
+    <string>Select Aquifer</string>
+   </property>
+   <widget class="QgsMapLayerComboBox" name="mMapLayerComboBox">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>20</y>
+      <width>281</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="filters">
+     <set>QgsMapLayerProxyModel::PolygonLayer</set>
+    </property>
+   </widget>
+   <widget class="QgsFieldComboBox" name="mFieldComboBox">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>60</y>
+      <width>160</width>
+      <height>27</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
  </widget>
  <customwidgets>
+  <customwidget>
+   <class>QgsCollapsibleGroupBox</class>
+   <extends>QGroupBox</extends>
+   <header>qgscollapsiblegroupbox.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>QgsFieldComboBox</class>
+   <extends>QComboBox</extends>
+   <header>qgsfieldcombobox.h</header>
+  </customwidget>
   <customwidget>
    <class>QgsMapLayerComboBox</class>
    <extends>QComboBox</extends>
